--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -165,24 +165,24 @@
                 </div>
             </section>
             {% if comment.replies %}
-            {% for reply in comment.replies %}
-            <blockquote class="replyBox">
-                <section style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-start;">
-                    <div>
-                        <p style="text-transform: capitalize; color: #c2c2c2b9; font-weight: bolder;">{{ reply.user.alias }}</p>
-                        <p style="color: #c2c2c2b9;">{{ reply.timestamp | timesince }} ago</p>
-                        <br>
-                        <p>{{ reply.content | safe }}</p>
-                    </div>
-                    <div style="display: flex; flex-direction: row; gap: 17px;">
-                        {% if request.user == reply.user %}
-                        <img src="{% static 'core/media/delete.svg' %}" alt="delete comment" width="20" height="20" style="cursor: pointer;">
-                        {% endif %}
-                        <!-- <img src="{% static 'core/media/flag.svg' %}" alt="flag comment" width="20" height="20" style="cursor: pointer;"> -->
-                    </div>
-                </section>                
-            </blockquote>
-            {% endfor %}
+                {% for reply in comment.replies %}
+                <blockquote class="replyBox">
+                    <section style="display: flex; flex-direction: row; justify-content: space-between; align-items: flex-start;">
+                        <div>
+                            <p style="text-transform: capitalize; color: #c2c2c2b9; font-weight: bolder;">{{ reply.user.alias }}</p>
+                            <p style="color: #c2c2c2b9;">{{ reply.timestamp | timesince }} ago</p>
+                            <br>
+                            <p>{{ reply.content | safe }}</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; gap: 17px;">
+                            {% if request.user == reply.user %}
+                            <img src="{% static 'core/media/delete.svg' %}" alt="delete comment" width="20" height="20" style="cursor: pointer;">
+                            {% endif %}
+                            <!-- <img src="{% static 'core/media/flag.svg' %}" alt="flag comment" width="20" height="20" style="cursor: pointer;"> -->
+                        </div>
+                    </section>                
+                </blockquote>
+                {% endfor %}
             {% endif %}
         </div>
 
@@ -196,8 +196,8 @@
                     {% csrf_token %}
                     <div class="modal-section">
                         <div>
-                            <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" style="width: 100%; padding: 4px; font-size: 14px; font-family: CrimsonPro;" placeholder="This conversation is moderated." required></textarea>
-                            <input type="hidden" name="parent_id" value="{{ comment.id }}">
+                            <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" placeholder="This conversation is moderated." required></textarea>
+                            <input type="hidden" name="parent_id" value="{{ comment.pk }}">
                             <p style="color: #929292; font-size: small; padding-top: 1px;">1/420 maximum characters.</p>
                         </div>
                         <div style="display: flex; justify-content: right; padding-top: 4px;">
@@ -221,11 +221,11 @@
             <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">Add a comment!</p>
             <span onclick="document.getElementById('newComment').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
         </div>
-        <form class="modal-container" method="POST" action="">
+        <form class="modal-container" method="POST" action=".">
             {% csrf_token %}
             <div class="modal-section">
                 <div>
-                    <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" style="width: 100%; padding: 4px; font-size: 14px; font-family: CrimsonPro;" placeholder="This conversation is moderated." required></textarea>
+                    <textarea name="content" rows="4" type="text" minlength="1" maxlength="420" placeholder="This conversation is moderated." required></textarea>
                     <p style="color: #929292; font-size: small; padding-top: 1px;">1/420 maximum characters.</p>
                 </div>
                 <div style="display: flex; justify-content: right; padding-top: 4px;">
