--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -253,15 +253,21 @@
     color: #FFFFFF;
 }
 .commentBox {
-    padding: 14px 7px;
+    padding: 14px 18px;
     margin-bottom: 18px;
     border-radius: 4px;
     background-color: #2b2b2b9f;
 }
 .replyBox {
-    margin: 30px 0;
+    margin: 30px 0 0 0;
     padding: 0 0 0 20px;
     border-left: 2px #adadad solid;
+}
+textarea {
+    width: 100%;
+    padding: 4px;
+    font-size: 14px;
+    font-family: CrimsonPro;
 }
 
 @media screen and (max-width: 820px) {
@@ -273,7 +279,7 @@
         grid-gap: 8px;
     }
     .header {
-        font-size: 28px;
+        font-size: 30px;
     }
     .category {
         font-size: 12px;
